--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vercel/postgres": "^0.5.1",
     "clsx": "^2.0.0",
     "next": "14.0.3",
+    "next-cloudinary": "^5.16.0",
     "react": "^18",
     "react-dom": "^18"
   },
