--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vercel/postgres": "^0.5.1",
+    "cloudinary": "^1.41.1",
     "clsx": "^2.0.0",
     "next": "14.0.3",
     "next-cloudinary": "^5.16.0",
